crates/oxc_react_compiler/tests/snapshots/ts-instantiation-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-instantiation-expression.tsx
---
import { c as _c } from "react/compiler-runtime";
import { identity, invoke } from "shared-runtime";
function Test() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = invoke(identity, "test");
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const str = t0;
	return str;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Test,
	params: []
};
