crates/oxc_react_compiler/tests/snapshots/type-alias-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-alias-declaration.ts
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.name) {
		t0 = { name: props.name };
		$[0] = props.name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const user = t0;
	return user;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ name: "Mofei" }]
};
