crates/oxc_react_compiler/tests/snapshots/type-alias-used-as-annotation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-alias-used-as-annotation.ts
---
// @enableAssumeHooksFollowRulesOfReact @enableTransitivelyFreezeFunctionExpressions
type Bar = string;
function TypeAliasUsedAsParamAnnotation() {
	const fun = _temp;
	fun("hello, world");
}
function _temp(f) {
	console.log(f);
}
export const FIXTURE_ENTRYPOINT = {
	fn: TypeAliasUsedAsParamAnnotation,
	params: []
};
