crates/oxc_react_compiler/tests/snapshots/type-alias-used-as-variable-annotation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-alias-used-as-variable-annotation.ts
---
// @enableAssumeHooksFollowRulesOfReact @enableTransitivelyFreezeFunctionExpressions
type Bar = string;
function TypeAliasUsedAsVariableAnnotation() {
	const fun = _temp;
	fun("hello, world");
}
function _temp(f) {
	const g = f;
	console.log(g);
}
export const FIXTURE_ENTRYPOINT = {
	fn: TypeAliasUsedAsVariableAnnotation,
	params: []
};
