crates/oxc_react_compiler/tests/snapshots/type-args-test-binary-operator.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-args-test-binary-operator.js
---
function component(a, b) {
	if (a > b) {}
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
