crates/oxc_react_compiler/tests/snapshots/type-binary-operator.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-binary-operator.js
---
function component() {
	const a = some();
	const b = someOther();
	if (a > b) {}
}
