crates/oxc_react_compiler/tests/snapshots/type-only-runtime-cache-import.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-only-runtime-cache-import.tsx
---
import type { c as useMemoCache } from "react/compiler-runtime";
function Component(props: {
	text: string;
}) {
	return <div>{props.text}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ text: "hello" }]
};
